# NexoShell

./: .gitignore  CMakeLists.txt  README.md
scripts/: build_linux.sh  build_windows.bat  run_windows.bat
source/backend/: CMakeLists.txt  backend.cpp  backend.hpp
source/frontend/: CMakeLists.txt  frontend.cpp  main.cpp
